# ITI-C--project

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
inc/: ILogSink.hpp  ITelemetrySource.hpp  LogFormatter.hpp  LogManager.hpp  LogMessage.hpp  LogSinks.hpp  LogTypes.hpp  Policys.hpp  RingBuffer.hpp  SafeFile.hpp  SafeSocket.hpp  TelemetrySources.hpp
src/: LogManager.cpp  LogMessage.cpp  LogSinks.cpp  SafeFile.cpp  SafeSocket.cpp  TelemetrySources.cpp
